try to fix overflow scroll

--- a/code/style.css
+++ b/code/style.css
@@ -10,9 +10,9 @@ body {
   color: white;
 }
 
-header {
-  overflow-x: hidden; 
-}
+/* header {
+  /* overflow-x: hidden;  */
+/* } */ 
 
 .hero {
   display: flex;
@@ -183,7 +183,6 @@ button {
   text-align: center;
   position: absolute;
   width: auto;
-  /* margin-bottom: 10px; */
   margin-left: 10px;
 }
 
